# TMU-Interns-Sales-Sense

./: .gitignore  README.md  Sales Call Transcript Collection - Feedback Tool Development.xlsx  main.py  mkdocs.yml  pyproject.toml  streamlit_app.py
.streamlit/: config.toml  secrets.toml
backend/: crewai_transcription.py  logging_config.py  main.py  multi_agent_system.py  simple_cache.py  test_transcription.py  transcription.py
docs/: index.md  installation.md  quick-start.md  salessense-poc-prd.md
views/: about_us.py  home.py  results.py  upload.py
