[project]
name = "salessense"
version = "0.1.0"
description = "AI-powered sales call analysis with multi-agent coaching insights"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.4.5",
    "openai>=1.45.0",
    "langchain>=0.2.16",
    "langchain-openai>=0.1.25",
    "langchain-core>=0.2.39",
    "langgraph>=0.2.28",
    "openai-whisper>=20231117",
    "ffmpeg-python>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "streamlit>=1.38.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
    "pandas>=2.2.2",
    "numpy>=2.1.1",
    "typing-extensions>=4.12.2",
    "pydantic>=2.9.2"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.0",
    "pymdown-extensions>=10.7.1",
    "mkdocs-material-extensions>=1.3.1"
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
salessense-backend = "uvicorn backend.main:app --host 0.0.0.0 --port 8000 --reload"
salessense-frontend = "streamlit run streamlit_app.py"
